 
  * HelpFormatter now prints command-line options in the same order as they
    have been added. Thanks to Per Cederberg. (CLI-212)

  * Standard help text now shows mandatory arguments also for the first option. Thanks to Kristoff Kiefer. (CLI-186)

  * HelpFormatter does not strip anymore leading whitespace in the footer text. Thanks to Uri Moszkowicz. (CLI-207)

  * Strip quotes contained in argument values only if there is exactly one at the
    beginning and one at the end. Thanks to Einar M R Rosenvinge. (CLI-185)

  * Negative numerical arguments take precedence over numerical options. (CLI-184) 

  * Fix possible StringIndexOutOfBoundsException in HelpFormatter. Thanks to Travis McLeskey. (CLI-193)

  * OptionGroups no longer throw an AlreadySelectedException when reused for several parsings. (CLI-183)
    
  * OptionGroup now selects properly an option with no short name. (CLI-182)


CHANGES:

  * Options.getRequiredOptions() now returns an unmodifiable list. (CLI-230) 

  * Clarify javadoc for CommandLine.getOptionValue() that the first specified
    argument will be returned. Thanks to Sven. (CLI-218) 

  * Changed unit tests to junit 4 annotation style. Thanks to Duncan Jones. (CLI-227) 

  * The javadoc of OptionBuilder now states that the class is not thread-safe. Thanks to Thomas Herre. (CLI-209) 

  * Fixed typo in javadoc of class CommandLine. Thanks to Gerard Weatherby. (CLI-200) 
  
  * Source code now uses generic types instead of raw types where possible. Thanks to Gerard Weatherby. (CLI-223) 

  * Corrected javadoc for return type of MissingOptionException.getMissingOptions(). Thanks to Joe Casadonte. (CLI-220)

  * Improve description of parameter "stopAtNonOption" in method
    CommandLine.parse(Options, String[], boolean). Thanks to Anders Larsson. (CLI-197)
    
  * Removed DoubleCheckedLocking test from checkstyle configuration. Thanks to Duncan Jones. (CLI-231)