@@ -23,6 +23,9 @@
   <body>
     
     <release version="1.3" date="in SVN" description="This is a maintenance release containing bug fixes.">
+      <action type="update" dev="tn" issue="CLI-240" due-to="Beluga Behr">
+        Small cleanup of Option class.
+      </action>
       <action type="update" dev="tn" issue="CLI-231" due-to="Duncan Jones">
         Removed DoubleCheckedLocking test from checkstyle configuration.
       </action>
